--- a/partials/servidores/cadastrar.html
+++ b/partials/servidores/cadastrar.html
@@ -259,10 +259,31 @@
             reader.readAsDataURL(this.files[0]);
         };
 
+
+        document.getElementById("foto34").onchange = function () {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                // get loaded data and render thumbnail.
+                document.getElementById("image_foto34").src = e.target.result;
+            };
+
+            // read the image file as a data URL.
+            reader.readAsDataURL(this.files[0]);
+        };
+
 	</script>
 
 </head>
 <div ng-app="myApp" ng-controller="ServidorController as ctrl">
+
+	<hr />
+	<div id="div_message"  style="display:none;"
+		 class="alert alert-danger">
+	</div>
+	<div id="div_message_sucess"  style="display:none;"
+		 class="alert alert-success">
+	</div>
 
 
 <ul id="content" class="nav nav-tabs" role="tablist" ng-init="Data.tabs[$parent.tab.i].title='Cadastrar Servidores'">
@@ -456,7 +477,7 @@
 					<option value="4">Beco</option>
 					<option value="5">AltoSitio</option>
 					<option value="6">Vila</option>
-                    <option value="7">Sítion</option>
+                    <option value="7">Sítio</option>
 					<option value="8">Outro...</option>
 				</select>
 				<span class="help-block">&nbsp;</span>
@@ -555,8 +576,8 @@
 
 
 			<div class="col-xs-3" id="div_tipo_gratificacao" style="display: none">
-				<label for="temGratificacao">Tipo de  Gratificação</label>
-				<select required id="tipoGratificacao" name="temGratificacao" class="form-control">
+				<label for="tipoGratificacao">Tipo de  Gratificação</label>
+				<select required id="tipoGratificacao" name="tipoGratificacao" class="form-control">
 					<option value="Portaria">Portaria</option>
 					<option value="Função Gratificativa FG">Função Gratificativa FG</option>
 					<option value="Outro">Outro</option>
@@ -583,6 +604,19 @@
             </tr>
             </thead>
             <tbody>
+			<tr >
+				<td>FOTO 3X4</td>
+				<td>
+					<input type="file" size="25px" demo-file-model="foto34" placeholder="Selecionar..."  id ="foto34"/>
+
+					<img id="image_foto34" width="150" height="150" />
+
+					<!--<a href="ftp://geerhco:RGeeoot@3873H@ftp.geerh.com.br/vistorias/5/fotos/Cnh.png">
+						<img  width="90" height="50" src="ftp://geerhco:RGeeoot@3873H@ftp.geerh.com.br/vistorias/5/fotos/Cnh.png"/>
+					</a>-->
+
+				</td>
+			</tr>
             <tr >
                 <td>RG</td>
                 <td>
